Day 1 exercises done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <body>
     <h1 id="header">Basics! 🚀</h1>
     <div id="container">
-    <ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
+    <ul id="switcher" class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
       <li><a href="#">Weeks in Minutes</a></li>
       <li><a href="#">Fahrenheight to Celcius</a></li>
       <li><a href="#">Road Trip Cost</a></li>
@@ -92,12 +92,12 @@
           <input id="input-road-trip" />
         </li>
         <li>
-          <p>Enter number of trips:</p>
-          <input id="input-ice-cream" />
+          <p>Enter number of trips to the ice-cream station:</p>
+          <input id="input-trips-to-ice-cream-station" />
         </li>
         <li>
           <p>Enter your words per minute:</p>
-          <input id="input-ice-cream" />
+          <input id="input-wpm" />
         </li>
     </ul>
     <br />
