Update index.html with proper margins, and format each day's content with links to demo site and source

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <div class="uk-grid">
       <div class="uk-width-1-1">
         <div class="uk-panel uk-panel-box">
-          <p></p>
-          <h3>My git repository for the Basics course from <a href="https://www.rocketacademy.co" target="_blank">RocketAcademy.co</a></h3>
-          <p>
-            <a href="day_1" target="_blank">Day 1</a>
-          </p>
+          <h1 class="uk-margin-medium-top uk-margin-medium-bottom">My demo site for the Basics course from <a href="https://www.rocketacademy.co" target="_blank">RocketAcademy.co</a></h1>
+          <hr>
+          <h4 class="uk-margin-small"><b>Day 1</b></h4>
+            <ul>
+              <li><a href="day_1" target="_blank">Demo Site</a></li>
+              <li><a href="https://github.com/daffodilistic/basics-starter-code/blob/main/day_1/script.js" target="_blank">Source</a></li>
+            </ul>
         </div>
       </div>
     </div>
