--- a/index.html
+++ b/index.html
@@ -18,13 +18,41 @@
     <div class="uk-grid">
       <div class="uk-width-1-1">
         <div class="uk-panel uk-panel-box">
-          <h1 class="uk-margin-medium-top uk-margin-medium-bottom">My demo site for the Basics course from <a href="https://www.rocketacademy.co" target="_blank">RocketAcademy.co</a></h1>
+          <h1 class="uk-margin-medium-top uk-margin-medium-bottom uk-text-center">My demo site for the Basics course from <a
+              href="https://www.rocketacademy.co" target="_blank">RocketAcademy.co</a></h1>
           <hr>
-          <h4 class="uk-margin-small"><b>Day 1</b></h4>
-            <ul>
-              <li><a href="day_1" target="_blank">Demo Site</a></li>
-              <li><a href="https://github.com/daffodilistic/basics-starter-code/blob/main/day_1/script.js" target="_blank">Source</a></li>
-            </ul>
+          <div class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
+            <div>
+              <div class="uk-card-small uk-card-default">
+                <div class="uk-card-header">
+                  <h3 class="uk-card-title uk-text-center">Day 1</h3>
+                </div>
+                <div class="uk-card-body">
+                  <div class="uk-column-1-2 uk-text-center">
+                    <p><a href="day_1" target="_blank" class="uk-button uk-button-text uk-text-primary">Demo site</a>
+                    </p>
+                    <p><a href="https://github.com/daffodilistic/basics-starter-code/blob/main/day_1/script.js"
+                        target="_blank" class="uk-button uk-button-text uk-text-primary">Source</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="uk-card-small uk-card-default">
+                <div class="uk-card-header">
+                  <h3 class="uk-card-title uk-text-center">Day 2</h3>
+                </div>
+                <div class="uk-card-body">
+                  <div class="uk-column-1-2 uk-text-center">
+                    <p><a href="day_2" target="_blank" class="uk-button uk-button-text uk-text-primary">Demo site</a>
+                    </p>
+                    <p><a href="https://github.com/daffodilistic/basics-starter-code/blob/main/day_2/script.js"
+                        target="_blank" class="uk-button uk-button-text uk-text-primary">Source</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
