--- a/day_1/index.html
+++ b/day_1/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Basics</title>
+  <title>Basics Day 1</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- UIkit CSS -->
