--- a/index.html
+++ b/index.html
@@ -21,45 +21,77 @@
           <h1 class="uk-margin-medium-top uk-margin-medium-bottom uk-text-center">My demo site for the Basics course
             from <a href="https://www.rocketacademy.co" target="_blank">RocketAcademy.co</a></h1>
           <hr>
-          <div id="card-grid" class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
+          <h2 class="uk-margin-small-top uk-margin-bottom uk-text-center">Exercises</h2>
+          <div id="card-grid-exercises" class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
+          </div>
+          <hr>
+          <h2 class="uk-margin-small-top uk-margin-bottom uk-text-center">Projects</h2>
+          <div id="card-grid-projects" class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
           </div>
         </div>
       </div>
     </div>
   </div>
   <script defer>
-    renderCards();
+    renderExercises();
+    renderProjects();
 
-    async function renderCards() {
+    async function renderExercises() {
       const DAYS = 12;
-      // const promisedPaths = [];
+
       for (let i = 1; i <= DAYS; i++) {
         const path = `day_${i}`;
         const response = await fetch(`${path}/index.html`, {
           method: 'HEAD'
         });
         if (response.ok) {
-          document.querySelector("#card-grid").innerHTML += `
+          document.querySelector("#card-grid-exercises").innerHTML += `
           <div>
-              <div class="uk-card-small uk-card-default">
-                <div class="uk-card-header">
-                  <h3 class="uk-card-title uk-text-center">Day ${i}</h3>
-                </div>
-                <div class="uk-card-body">
-                  <div class="uk-column-1-2 uk-text-center">
-                    <p><a href="${path}" target="_blank" class="uk-button uk-button-text uk-text-primary">Demo site</a>
-                    </p>
-                    <p><a href="https://github.com/daffodilistic/basics-starter-code/blob/main/${path}/script.js"
-                        target="_blank" class="uk-button uk-button-text uk-text-primary">Source</a></p>
-                  </div>
+            <div class="uk-card-small uk-card-default">
+              <div class="uk-card-header">
+                <h3 class="uk-card-title uk-text-center">Day ${i}</h3>
+              </div>
+              <div class="uk-card-body">
+                <div class="uk-column-1-2 uk-text-center">
+                  <p><a href="${path}" target="_blank" class="uk-button uk-button-text uk-text-primary">Demo site</a>
+                  </p>
+                  <p><a href="https://github.com/daffodilistic/rocketacademy-basics/blob/main/${path}/script.js"
+                      target="_blank" class="uk-button uk-button-text uk-text-primary">Source</a></p>
                 </div>
               </div>
-            </div>`;
+            </div>
+          </div>`;
         } else {
           // console.log("stopped at ", i);
           break;
         }
       }
+    }
+
+    function renderProjects() {
+      const projects = Object.freeze(["scissors-paper-stone"]);
+
+      projects.forEach((project) => {
+        const path = `projects/${project}`;
+        const projectTitle = project.replace(RegExp("-", "g"), " ");
+
+        document.querySelector("#card-grid-projects").innerHTML += `
+        <div>
+          <div class="uk-card-small uk-card-default">
+            <div class="uk-card-header">
+              <h3 class="uk-card-title uk-text-center uk-text-capitalize">${projectTitle}</h3>
+            </div>
+            <div class="uk-card-body">
+              <div class="uk-column-1-2 uk-text-center">
+                <p><a href="${path}" target="_blank" class="uk-button uk-button-text uk-text-primary">Demo site</a>
+                </p>
+                <p><a href="https://github.com/daffodilistic/rocketacademy-basics-starter-code/blob/main/script.js"
+                    target="_blank" class="uk-button uk-button-text uk-text-primary">Source</a></p>
+              </div>
+            </div>
+          </div>
+        </div>`;
+      });
     }
   </script>
 </body>
