--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="uk-column-1-2 uk-text-center">
                 <p><a href="${path}" target="_blank" class="uk-button uk-button-text uk-text-primary">Demo site</a>
                 </p>
-                <p><a href="https://github.com/daffodilistic/rocketacademy-basics-starter-code/blob/main/script.js"
+                <p><a href="https://github.com/daffodilistic/rocketacademy-basics-${project}/blob/main/script.js"
                     target="_blank" class="uk-button uk-button-text uk-text-primary">Source</a></p>
               </div>
             </div>
