--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     }
 
     function renderProjects() {
-      const projects = Object.freeze(["scissors-paper-stone", "beat-that"]);
+      const projects = Object.freeze(["scissors-paper-stone", "beat-that", "blackjack"]);
 
       projects.forEach((project) => {
         const path = `projects/${project}`;
